# server/apps/resumes/serializers.py
@@ -109,7 +109,7 @@ class ResumeSerializer(serializers.ModelSerializer):
 
     class Meta:
         model = Resume
-        fields = ["id", "title", "template", "content", "created_at", "updated_at"]
+        fields = ["id", "title", "template", "document_font", "content", "created_at", "updated_at"]
         read_only_fields = ["id", "created_at", "updated_at"]
 
 
